# test_publish_coverage

./: CMakeLists.txt  Dockerfile  index-sort-f.html  index-sort-l.html  index.html
.github/workflows/: ci.yml
src/: hello.cpp  hello.cpp.func-sort-c.html  hello.cpp.func.html  hello.cpp.gcov.html  hello.h  index-sort-f.html  index-sort-l.html  index.html
tests/: index-sort-f.html  index-sort-l.html  index.html  test_hello.cpp  test_hello.cpp.func-sort-c.html  test_hello.cpp.func.html  test_hello.cpp.gcov.html
